[package]
name = "rustwebservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10.4", features = ["blocking"] }
openssl = "0.10.52"
